seaqt/QtGui/gen_qaccessible.h

typedef QAccessible::State QAccessible__State;
typedef struct QAccessible__State QAccessible__State;
typedef struct QAccessibleActionInterface QAccessibleActionInterface;
typedef struct QAccessibleEvent QAccessibleEvent;
typedef struct QAccessibleImageInterface QAccessibleImageInterface;
typedef struct QAccessibleInterface QAccessibleInterface;
typedef struct QAccessibleStateChangeEvent QAccessibleStateChangeEvent;
typedef struct QAccessibleTableInterface QAccessibleTableInterface;
typedef struct QAccessibleTableModelChangeEvent QAccessibleTableModelChangeEvent;
typedef struct QAccessibleTextCursorEvent QAccessibleTextCursorEvent;
typedef struct QAccessibleTextInsertEvent QAccessibleTextInsertEvent;
typedef struct QAccessibleTextRemoveEvent QAccessibleTextRemoveEvent;
typedef struct QAccessibleTextSelectionEvent QAccessibleTextSelectionEvent;
typedef struct QObject QObject;
typedef struct QPoint QPoint;
typedef struct QSize QSize;
bool QAccessibleTableInterface_isRowSelected(const QAccessibleTableInterface* self, int row);
bool QAccessibleTableInterface_selectRow(QAccessibleTableInterface* self, int row);
bool QAccessibleTableInterface_selectColumn(QAccessibleTableInterface* self, int column);
bool QAccessibleTableInterface_unselectRow(QAccessibleTableInterface* self, int row);
bool QAccessibleTableInterface_unselectColumn(QAccessibleTableInterface* self, int column);
void QAccessibleTableInterface_modelChange(QAccessibleTableInterface* self, QAccessibleTableModelChangeEvent* event);
void QAccessibleTableInterface_operatorAssign(QAccessibleTableInterface* self, QAccessibleTableInterface* param1);
struct seaqt_string QAccessibleActionInterface_tr(const char* sourceText);
struct seaqt_string QAccessibleActionInterface_trUtf8(const char* sourceText);
struct seaqt_array /* of struct seaqt_string */  QAccessibleActionInterface_actionNames(const QAccessibleActionInterface* self);
struct seaqt_string QAccessibleActionInterface_localizedActionName(const QAccessibleActionInterface* self, struct seaqt_string name);
struct seaqt_string QAccessibleActionInterface_localizedActionDescription(const QAccessibleActionInterface* self, struct seaqt_string name);
void QAccessibleActionInterface_doAction(QAccessibleActionInterface* self, struct seaqt_string actionName);
struct seaqt_array /* of struct seaqt_string */  QAccessibleActionInterface_keyBindingsForAction(const QAccessibleActionInterface* self, struct seaqt_string actionName);
struct seaqt_string QAccessibleActionInterface_pressAction();
struct seaqt_string QAccessibleActionInterface_increaseAction();
struct seaqt_string QAccessibleActionInterface_decreaseAction();
struct seaqt_string QAccessibleActionInterface_showMenuAction();
struct seaqt_string QAccessibleActionInterface_setFocusAction();
struct seaqt_string QAccessibleActionInterface_toggleAction();
struct seaqt_string QAccessibleActionInterface_scrollLeftAction();
struct seaqt_string QAccessibleActionInterface_scrollRightAction();
struct seaqt_string QAccessibleActionInterface_scrollUpAction();
struct seaqt_string QAccessibleActionInterface_scrollDownAction();
struct seaqt_string QAccessibleActionInterface_nextPageAction();
struct seaqt_string QAccessibleActionInterface_previousPageAction();
void QAccessibleActionInterface_operatorAssign(QAccessibleActionInterface* self, QAccessibleActionInterface* param1);
struct seaqt_string QAccessibleActionInterface_tr2(const char* sourceText, const char* disambiguation);
struct seaqt_string QAccessibleActionInterface_tr3(const char* sourceText, const char* disambiguation, int n);
struct seaqt_string QAccessibleActionInterface_trUtf82(const char* sourceText, const char* disambiguation);
struct seaqt_string QAccessibleActionInterface_trUtf83(const char* sourceText, const char* disambiguation, int n);
struct seaqt_string QAccessibleImageInterface_imageDescription(const QAccessibleImageInterface* self);
QSize* QAccessibleImageInterface_imageSize(const QAccessibleImageInterface* self);
QPoint* QAccessibleImageInterface_imagePosition(const QAccessibleImageInterface* self);
void QAccessibleImageInterface_operatorAssign(QAccessibleImageInterface* self, QAccessibleImageInterface* param1);
typedef struct VirtualQAccessibleEvent VirtualQAccessibleEvent;
typedef struct QAccessibleEvent_VTable{
	void (*destructor)(VirtualQAccessibleEvent* self);
	QAccessibleInterface* (*accessibleInterface)(const VirtualQAccessibleEvent* self);
}QAccessibleEvent_VTable;
void* QAccessibleEvent_vdata(VirtualQAccessibleEvent* self);
VirtualQAccessibleEvent* vdata_QAccessibleEvent(void* vdata);
VirtualQAccessibleEvent* QAccessibleEvent_new(const QAccessibleEvent_VTable* vtbl, size_t vdata, QObject* obj, int typ);
VirtualQAccessibleEvent* QAccessibleEvent_new2(const QAccessibleEvent_VTable* vtbl, size_t vdata, QAccessibleInterface* iface, int typ);
int QAccessibleEvent_type(const QAccessibleEvent* self);
QObject* QAccessibleEvent_object(const QAccessibleEvent* self);
unsigned int QAccessibleEvent_uniqueId(const QAccessibleEvent* self);
void QAccessibleEvent_setChild(QAccessibleEvent* self, int chld);
int QAccessibleEvent_child(const QAccessibleEvent* self);
QAccessibleInterface* QAccessibleEvent_accessibleInterface(const QAccessibleEvent* self);
QAccessibleInterface* QAccessibleEvent_virtualbase_accessibleInterface(const VirtualQAccessibleEvent* self);
typedef struct VirtualQAccessibleStateChangeEvent VirtualQAccessibleStateChangeEvent;
typedef struct QAccessibleStateChangeEvent_VTable{
	void (*destructor)(VirtualQAccessibleStateChangeEvent* self);
	QAccessibleInterface* (*accessibleInterface)(const VirtualQAccessibleStateChangeEvent* self);
}QAccessibleStateChangeEvent_VTable;
void* QAccessibleStateChangeEvent_vdata(VirtualQAccessibleStateChangeEvent* self);
VirtualQAccessibleStateChangeEvent* vdata_QAccessibleStateChangeEvent(void* vdata);
VirtualQAccessibleStateChangeEvent* QAccessibleStateChangeEvent_new(const QAccessibleStateChangeEvent_VTable* vtbl, size_t vdata, QObject* obj, QAccessible__State* state);
VirtualQAccessibleStateChangeEvent* QAccessibleStateChangeEvent_new2(const QAccessibleStateChangeEvent_VTable* vtbl, size_t vdata, QAccessibleInterface* iface, QAccessible__State* state);
QAccessible__State* QAccessibleStateChangeEvent_changedStates(const QAccessibleStateChangeEvent* self);
QAccessibleInterface* QAccessibleStateChangeEvent_virtualbase_accessibleInterface(const VirtualQAccessibleStateChangeEvent* self);
typedef struct VirtualQAccessibleTextCursorEvent VirtualQAccessibleTextCursorEvent;
typedef struct QAccessibleTextCursorEvent_VTable{
	void (*destructor)(VirtualQAccessibleTextCursorEvent* self);
	QAccessibleInterface* (*accessibleInterface)(const VirtualQAccessibleTextCursorEvent* self);
}QAccessibleTextCursorEvent_VTable;
void* QAccessibleTextCursorEvent_vdata(VirtualQAccessibleTextCursorEvent* self);
VirtualQAccessibleTextCursorEvent* vdata_QAccessibleTextCursorEvent(void* vdata);
VirtualQAccessibleTextCursorEvent* QAccessibleTextCursorEvent_new(const QAccessibleTextCursorEvent_VTable* vtbl, size_t vdata, QObject* obj, int cursorPos);
VirtualQAccessibleTextCursorEvent* QAccessibleTextCursorEvent_new2(const QAccessibleTextCursorEvent_VTable* vtbl, size_t vdata, QAccessibleInterface* iface, int cursorPos);
void QAccessibleTextCursorEvent_setCursorPosition(QAccessibleTextCursorEvent* self, int position);
int QAccessibleTextCursorEvent_cursorPosition(const QAccessibleTextCursorEvent* self);
QAccessibleInterface* QAccessibleTextCursorEvent_virtualbase_accessibleInterface(const VirtualQAccessibleTextCursorEvent* self);
typedef struct VirtualQAccessibleTextSelectionEvent VirtualQAccessibleTextSelectionEvent;
typedef struct QAccessibleTextSelectionEvent_VTable{
	void (*destructor)(VirtualQAccessibleTextSelectionEvent* self);
	QAccessibleInterface* (*accessibleInterface)(const VirtualQAccessibleTextSelectionEvent* self);
}QAccessibleTextSelectionEvent_VTable;
void* QAccessibleTextSelectionEvent_vdata(VirtualQAccessibleTextSelectionEvent* self);
VirtualQAccessibleTextSelectionEvent* vdata_QAccessibleTextSelectionEvent(void* vdata);
VirtualQAccessibleTextSelectionEvent* QAccessibleTextSelectionEvent_new(const QAccessibleTextSelectionEvent_VTable* vtbl, size_t vdata, QObject* obj, int start, int end);
VirtualQAccessibleTextSelectionEvent* QAccessibleTextSelectionEvent_new2(const QAccessibleTextSelectionEvent_VTable* vtbl, size_t vdata, QAccessibleInterface* iface, int start, int end);
void QAccessibleTextSelectionEvent_setSelection(QAccessibleTextSelectionEvent* self, int start, int end);
int QAccessibleTextSelectionEvent_selectionStart(const QAccessibleTextSelectionEvent* self);
int QAccessibleTextSelectionEvent_selectionEnd(const QAccessibleTextSelectionEvent* self);
QAccessibleInterface* QAccessibleTextSelectionEvent_virtualbase_accessibleInterface(const VirtualQAccessibleTextSelectionEvent* self);
typedef struct VirtualQAccessibleTextInsertEvent VirtualQAccessibleTextInsertEvent;
typedef struct QAccessibleTextInsertEvent_VTable{
	void (*destructor)(VirtualQAccessibleTextInsertEvent* self);
	QAccessibleInterface* (*accessibleInterface)(const VirtualQAccessibleTextInsertEvent* self);
}QAccessibleTextInsertEvent_VTable;
void* QAccessibleTextInsertEvent_vdata(VirtualQAccessibleTextInsertEvent* self);
VirtualQAccessibleTextInsertEvent* vdata_QAccessibleTextInsertEvent(void* vdata);
VirtualQAccessibleTextInsertEvent* QAccessibleTextInsertEvent_new(const QAccessibleTextInsertEvent_VTable* vtbl, size_t vdata, QObject* obj, int position, struct seaqt_string text);
VirtualQAccessibleTextInsertEvent* QAccessibleTextInsertEvent_new2(const QAccessibleTextInsertEvent_VTable* vtbl, size_t vdata, QAccessibleInterface* iface, int position, struct seaqt_string text);
struct seaqt_string QAccessibleTextInsertEvent_textInserted(const QAccessibleTextInsertEvent* self);
int QAccessibleTextInsertEvent_changePosition(const QAccessibleTextInsertEvent* self);
QAccessibleInterface* QAccessibleTextInsertEvent_virtualbase_accessibleInterface(const VirtualQAccessibleTextInsertEvent* self);
typedef struct VirtualQAccessibleTextRemoveEvent VirtualQAccessibleTextRemoveEvent;
void* QAccessibleTextRemoveEvent_vdata(VirtualQAccessibleTextRemoveEvent* self);
VirtualQAccessibleTextRemoveEvent* vdata_QAccessibleTextRemoveEvent(void* vdata);
struct seaqt_string QAccessibleTextRemoveEvent_textRemoved(const QAccessibleTextRemoveEvent* self);
int QAccessibleTextRemoveEvent_changePosition(const QAccessibleTextRemoveEvent* self);