seaqt/QtGui/gen_qaccessible.nim

proc fcQAccessibleTableInterface_isRowSelected(self: pointer, row: cint): bool {.importc: "QAccessibleTableInterface_isRowSelected".}
proc fcQAccessibleTableInterface_selectRow(self: pointer, row: cint): bool {.importc: "QAccessibleTableInterface_selectRow".}
proc fcQAccessibleTableInterface_selectColumn(self: pointer, column: cint): bool {.importc: "QAccessibleTableInterface_selectColumn".}
proc fcQAccessibleTableInterface_unselectRow(self: pointer, row: cint): bool {.importc: "QAccessibleTableInterface_unselectRow".}
proc fcQAccessibleTableInterface_unselectColumn(self: pointer, column: cint): bool {.importc: "QAccessibleTableInterface_unselectColumn".}
proc fcQAccessibleTableInterface_modelChange(self: pointer, event: pointer): void {.importc: "QAccessibleTableInterface_modelChange".}
proc fcQAccessibleTableInterface_operatorAssign(self: pointer, param1: pointer): void {.importc: "QAccessibleTableInterface_operatorAssign".}
proc fcQAccessibleActionInterface_tr(sourceText: cstring): struct_seaqt_string {.importc: "QAccessibleActionInterface_tr".}
proc fcQAccessibleActionInterface_trUtf8(sourceText: cstring): struct_seaqt_string {.importc: "QAccessibleActionInterface_trUtf8".}
proc fcQAccessibleActionInterface_actionNames(self: pointer): struct_seaqt_array {.importc: "QAccessibleActionInterface_actionNames".}
proc fcQAccessibleActionInterface_localizedActionName(self: pointer, name: struct_seaqt_string): struct_seaqt_string {.importc: "QAccessibleActionInterface_localizedActionName".}
proc fcQAccessibleActionInterface_localizedActionDescription(self: pointer, name: struct_seaqt_string): struct_seaqt_string {.importc: "QAccessibleActionInterface_localizedActionDescription".}
proc fcQAccessibleActionInterface_doAction(self: pointer, actionName: struct_seaqt_string): void {.importc: "QAccessibleActionInterface_doAction".}
proc fcQAccessibleActionInterface_keyBindingsForAction(self: pointer, actionName: struct_seaqt_string): struct_seaqt_array {.importc: "QAccessibleActionInterface_keyBindingsForAction".}
proc fcQAccessibleActionInterface_pressAction(): struct_seaqt_string {.importc: "QAccessibleActionInterface_pressAction".}
proc fcQAccessibleActionInterface_increaseAction(): struct_seaqt_string {.importc: "QAccessibleActionInterface_increaseAction".}
proc fcQAccessibleActionInterface_decreaseAction(): struct_seaqt_string {.importc: "QAccessibleActionInterface_decreaseAction".}
proc fcQAccessibleActionInterface_showMenuAction(): struct_seaqt_string {.importc: "QAccessibleActionInterface_showMenuAction".}
proc fcQAccessibleActionInterface_setFocusAction(): struct_seaqt_string {.importc: "QAccessibleActionInterface_setFocusAction".}
proc fcQAccessibleActionInterface_toggleAction(): struct_seaqt_string {.importc: "QAccessibleActionInterface_toggleAction".}
proc fcQAccessibleActionInterface_scrollLeftAction(): struct_seaqt_string {.importc: "QAccessibleActionInterface_scrollLeftAction".}
proc fcQAccessibleActionInterface_scrollRightAction(): struct_seaqt_string {.importc: "QAccessibleActionInterface_scrollRightAction".}
proc fcQAccessibleActionInterface_scrollUpAction(): struct_seaqt_string {.importc: "QAccessibleActionInterface_scrollUpAction".}
proc fcQAccessibleActionInterface_scrollDownAction(): struct_seaqt_string {.importc: "QAccessibleActionInterface_scrollDownAction".}
proc fcQAccessibleActionInterface_nextPageAction(): struct_seaqt_string {.importc: "QAccessibleActionInterface_nextPageAction".}
proc fcQAccessibleActionInterface_previousPageAction(): struct_seaqt_string {.importc: "QAccessibleActionInterface_previousPageAction".}
proc fcQAccessibleActionInterface_operatorAssign(self: pointer, param1: pointer): void {.importc: "QAccessibleActionInterface_operatorAssign".}
proc fcQAccessibleActionInterface_tr2(sourceText: cstring, disambiguation: cstring): struct_seaqt_string {.importc: "QAccessibleActionInterface_tr2".}
proc fcQAccessibleActionInterface_tr3(sourceText: cstring, disambiguation: cstring, n: cint): struct_seaqt_string {.importc: "QAccessibleActionInterface_tr3".}
proc fcQAccessibleActionInterface_trUtf82(sourceText: cstring, disambiguation: cstring): struct_seaqt_string {.importc: "QAccessibleActionInterface_trUtf82".}
proc fcQAccessibleActionInterface_trUtf83(sourceText: cstring, disambiguation: cstring, n: cint): struct_seaqt_string {.importc: "QAccessibleActionInterface_trUtf83".}
proc fcQAccessibleImageInterface_imageDescription(self: pointer): struct_seaqt_string {.importc: "QAccessibleImageInterface_imageDescription".}
proc fcQAccessibleImageInterface_imageSize(self: pointer): pointer {.importc: "QAccessibleImageInterface_imageSize".}
proc fcQAccessibleImageInterface_imagePosition(self: pointer): pointer {.importc: "QAccessibleImageInterface_imagePosition".}
proc fcQAccessibleImageInterface_operatorAssign(self: pointer, param1: pointer): void {.importc: "QAccessibleImageInterface_operatorAssign".}
proc fcQAccessibleEvent_typeX(self: pointer): cint {.importc: "QAccessibleEvent_type".}
proc fcQAccessibleEvent_objectX(self: pointer): pointer {.importc: "QAccessibleEvent_object".}
proc fcQAccessibleEvent_uniqueId(self: pointer): cuint {.importc: "QAccessibleEvent_uniqueId".}
proc fcQAccessibleEvent_setChild(self: pointer, chld: cint): void {.importc: "QAccessibleEvent_setChild".}
proc fcQAccessibleEvent_child(self: pointer): cint {.importc: "QAccessibleEvent_child".}
proc fcQAccessibleEvent_accessibleInterface(self: pointer): pointer {.importc: "QAccessibleEvent_accessibleInterface".}
proc fcQAccessibleEvent_vdata(self: pointer): ptr pointer {.importc: "QAccessibleEvent_vdata".}
proc fvdata_cQAccessibleEvent(self: pointer): pointer {.importc: "vdata_QAccessibleEvent".}

type cQAccessibleEventVTable {.pure.} = object
  destructor*: proc(self: pointer) {.cdecl, raises:[], gcsafe.}
  accessibleInterface*: proc(self: pointer): pointer {.cdecl, raises: [], gcsafe.}
proc fcQAccessibleEvent_virtualbase_accessibleInterface(self: pointer): pointer {.importc: "QAccessibleEvent_virtualbase_accessibleInterface".}
proc fcQAccessibleEvent_new(vtbl: pointer, vdata: csize_t, obj: pointer, typ: cint): ptr cQAccessibleEvent {.importc: "QAccessibleEvent_new".}
proc fcQAccessibleEvent_new2(vtbl: pointer, vdata: csize_t, iface: pointer, typ: cint): ptr cQAccessibleEvent {.importc: "QAccessibleEvent_new2".}
proc fcQAccessibleStateChangeEvent_changedStates(self: pointer): pointer {.importc: "QAccessibleStateChangeEvent_changedStates".}
proc fcQAccessibleStateChangeEvent_vdata(self: pointer): ptr pointer {.importc: "QAccessibleStateChangeEvent_vdata".}
proc fvdata_cQAccessibleStateChangeEvent(self: pointer): pointer {.importc: "vdata_QAccessibleStateChangeEvent".}

type cQAccessibleStateChangeEventVTable {.pure.} = object
  destructor*: proc(self: pointer) {.cdecl, raises:[], gcsafe.}
  accessibleInterface*: proc(self: pointer): pointer {.cdecl, raises: [], gcsafe.}
proc fcQAccessibleStateChangeEvent_virtualbase_accessibleInterface(self: pointer): pointer {.importc: "QAccessibleStateChangeEvent_virtualbase_accessibleInterface".}
proc fcQAccessibleStateChangeEvent_new(vtbl: pointer, vdata: csize_t, obj: pointer, state: pointer): ptr cQAccessibleStateChangeEvent {.importc: "QAccessibleStateChangeEvent_new".}
proc fcQAccessibleStateChangeEvent_new2(vtbl: pointer, vdata: csize_t, iface: pointer, state: pointer): ptr cQAccessibleStateChangeEvent {.importc: "QAccessibleStateChangeEvent_new2".}
proc fcQAccessibleTextCursorEvent_setCursorPosition(self: pointer, position: cint): void {.importc: "QAccessibleTextCursorEvent_setCursorPosition".}
proc fcQAccessibleTextCursorEvent_cursorPosition(self: pointer): cint {.importc: "QAccessibleTextCursorEvent_cursorPosition".}
proc fcQAccessibleTextCursorEvent_vdata(self: pointer): ptr pointer {.importc: "QAccessibleTextCursorEvent_vdata".}
proc fvdata_cQAccessibleTextCursorEvent(self: pointer): pointer {.importc: "vdata_QAccessibleTextCursorEvent".}

type cQAccessibleTextCursorEventVTable {.pure.} = object
  destructor*: proc(self: pointer) {.cdecl, raises:[], gcsafe.}
  accessibleInterface*: proc(self: pointer): pointer {.cdecl, raises: [], gcsafe.}
proc fcQAccessibleTextCursorEvent_virtualbase_accessibleInterface(self: pointer): pointer {.importc: "QAccessibleTextCursorEvent_virtualbase_accessibleInterface".}
proc fcQAccessibleTextCursorEvent_new(vtbl: pointer, vdata: csize_t, obj: pointer, cursorPos: cint): ptr cQAccessibleTextCursorEvent {.importc: "QAccessibleTextCursorEvent_new".}
proc fcQAccessibleTextCursorEvent_new2(vtbl: pointer, vdata: csize_t, iface: pointer, cursorPos: cint): ptr cQAccessibleTextCursorEvent {.importc: "QAccessibleTextCursorEvent_new2".}
proc fcQAccessibleTextSelectionEvent_setSelection(self: pointer, start: cint, endVal: cint): void {.importc: "QAccessibleTextSelectionEvent_setSelection".}
proc fcQAccessibleTextSelectionEvent_selectionStart(self: pointer): cint {.importc: "QAccessibleTextSelectionEvent_selectionStart".}
proc fcQAccessibleTextSelectionEvent_selectionEnd(self: pointer): cint {.importc: "QAccessibleTextSelectionEvent_selectionEnd".}
proc fcQAccessibleTextSelectionEvent_vdata(self: pointer): ptr pointer {.importc: "QAccessibleTextSelectionEvent_vdata".}
proc fvdata_cQAccessibleTextSelectionEvent(self: pointer): pointer {.importc: "vdata_QAccessibleTextSelectionEvent".}

type cQAccessibleTextSelectionEventVTable {.pure.} = object
  destructor*: proc(self: pointer) {.cdecl, raises:[], gcsafe.}
  accessibleInterface*: proc(self: pointer): pointer {.cdecl, raises: [], gcsafe.}
proc fcQAccessibleTextSelectionEvent_virtualbase_accessibleInterface(self: pointer): pointer {.importc: "QAccessibleTextSelectionEvent_virtualbase_accessibleInterface".}
proc fcQAccessibleTextSelectionEvent_new(vtbl: pointer, vdata: csize_t, obj: pointer, start: cint, endVal: cint): ptr cQAccessibleTextSelectionEvent {.importc: "QAccessibleTextSelectionEvent_new".}
proc fcQAccessibleTextSelectionEvent_new2(vtbl: pointer, vdata: csize_t, iface: pointer, start: cint, endVal: cint): ptr cQAccessibleTextSelectionEvent {.importc: "QAccessibleTextSelectionEvent_new2".}
proc fcQAccessibleTextInsertEvent_textInserted(self: pointer): struct_seaqt_string {.importc: "QAccessibleTextInsertEvent_textInserted".}
proc fcQAccessibleTextInsertEvent_changePosition(self: pointer): cint {.importc: "QAccessibleTextInsertEvent_changePosition".}
proc fcQAccessibleTextInsertEvent_vdata(self: pointer): ptr pointer {.importc: "QAccessibleTextInsertEvent_vdata".}
proc fvdata_cQAccessibleTextInsertEvent(self: pointer): pointer {.importc: "vdata_QAccessibleTextInsertEvent".}

type cQAccessibleTextInsertEventVTable {.pure.} = object
  destructor*: proc(self: pointer) {.cdecl, raises:[], gcsafe.}
  accessibleInterface*: proc(self: pointer): pointer {.cdecl, raises: [], gcsafe.}
proc fcQAccessibleTextInsertEvent_virtualbase_accessibleInterface(self: pointer): pointer {.importc: "QAccessibleTextInsertEvent_virtualbase_accessibleInterface".}
proc fcQAccessibleTextInsertEvent_new(vtbl: pointer, vdata: csize_t, obj: pointer, position: cint, text: struct_seaqt_string): ptr cQAccessibleTextInsertEvent {.importc: "QAccessibleTextInsertEvent_new".}
proc fcQAccessibleTextInsertEvent_new2(vtbl: pointer, vdata: csize_t, iface: pointer, position: cint, text: struct_seaqt_string): ptr cQAccessibleTextInsertEvent {.importc: "QAccessibleTextInsertEvent_new2".}
proc fcQAccessibleTextRemoveEvent_textRemoved(self: pointer): struct_seaqt_string {.importc: "QAccessibleTextRemoveEvent_textRemoved".}
proc fcQAccessibleTextRemoveEvent_changePosition(self: pointer): cint {.importc: "QAccessibleTextRemoveEvent_changePosition".}
proc fcQAccessibleTextRemoveEvent_vdata(self: pointer): ptr pointer {.importc: "QAccessibleTextRemoveEvent_vdata".}
proc fvdata_cQAccessibleTextRemoveEvent(self: pointer): pointer {.importc: "vdata_QAccessibleTextRemoveEvent".}
